# booklog-app

./: EDIT_BOOK_FEATURE.md  IMAGE_UPLOAD_GUIDE.md  QUICK_START_IMAGES.md  STATUS_FEATURE_SUMMARY.md  STATUS_VALIDATION.md
backend/: ALEMBIC_GUIDE.md  ARCHITECTURE.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  books.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 078d623a92bf_add_image_url_column_to_books_table.py  17dcc2b3196d_add_status_column_to_books_table.py  a1b2c3d4e5f6_create_genres_table.py  a2b3c4d5e6f7_add_created_at_column_to_books_table.py  c32193d20a8a_add_author_column_to_books_table.py  d90f7540b0bb_add_genre_column_to_books_table.py  db29145843f5_описание_изменений.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: books.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  book.py  genre.py
backend/app/repositories/: __init__.py  book.py
backend/app/schemas/: __init__.py  book.py
backend/app/services/: __init__.py  book.py
backend/app/utils/: __init__.py  enums.py  image.py
backend/src/: __init__.py  main.py
backend/src/books/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/src/common/: __init__.py
backend/src/common/utils/: __init__.py
backend/src/core/: __init__.py  base.py  config.py  database.py
backend/src/genres/: __init__.py  models.py
backend/src/user/: models.py  schemas.py
frontend/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  README.md  (+7 more)
(+27 files in other folders)
